# sun1p1

./: .clang-format  .gitignore  CMakeLists.txt  README.txt  blocks.h  combat.c  defs.c  defs.h  gen.c  items.c  main.c  makefile  menu.c  menu.h  renderer.c  slp.c  stackops.c
assets/: items.txt  spells.txt  textures.txt
assets/mobdna/: 1
include/: combat.h  defs.h  gen.h  items.h  menu.h  renderer.h  slp.h  stackops.h
src/: combat.c  combat.cpp  gen.c  gen.cpp  main.c  main.cpp  menu.c  menu.cpp  renderer.c  renderer.cpp  slp.c  slp.cpp  stackops.c  stackops.cpp
